# max-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  main.py  max-ai-spec-v0.3.md  pyproject.toml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ba061ec650de_initial.py
scripts/: check_branch_name.sh  seed.py  setup_calendar.py  setup_spotify.py  test_deepgram.py  voice_dev.py
specs/: FEATURES.md  always-listening.md  architecture.md  feature-1-wake-word.md  feature-1a-deepgram-transcription.md  feature-2-free-order-of-actions.md  feature-3-subagents.md  feature-4-ui-dot.md
src/max_ai/: __init__.py  __main__.py  agent.py  cli.py  client.py  config.py  persistence.py  prompts.py  voice_cli.py
src/max_ai/agent/: __init__.py  agent.j2  agent.py  core.py  loop.py  memory.py  observability.py  prompts.py  system_prompt.j2
src/max_ai/agent/llm/: base.py  openai.py
src/max_ai/agent/prompts/: agent.j2
src/max_ai/agent/tools/: __init__.py  alarm.py  (+9 more)
src/max_ai/api/: app.py
src/max_ai/cli/: chat.py
src/max_ai/core/: config.py  logging.py
src/max_ai/db/: __init__.py  base.py  conversation.py  document.py  models.py  session.py
src/max_ai/models/: __init__.py  schemas.py
src/max_ai/monitoring/: __init__.py  langwatch.py
src/max_ai/prompts/: system.j2  voice.j2  voice_system.j2
src/max_ai/tools/: __init__.py  alarm.py  base.py  calendar.py  documents.py  registry.py  search.py  spotify.py  state.py  timer.py
src/max_ai/voice/: audio_capture.py  debug.py  display.py  events.py  listen_loop.py  loop.py  orchestrator.py  recorder.py  state_machine.py  stt.py  transcribe.py  tts.py  vad.py  wakeword.py
tests/: conftest.py  test_agent.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_persistence.py  test_tools.py
tests/agent/: test_agent.py  test_loop.py  test_prompts.py
tests/agent/tools/: test_base.py  test_calendar.py  test_documents.py  test_registry.py  test_timer.py
tests/db/: test_conversation.py  test_document.py
tests/evals/: test_evals.py
tests/evals/datasets/: crud_cases.json  planning_cases.json  review_cases.json
tests/test_agent/: conftest.py  test_tools.py
tests/tools/: test_alarm.py  test_base.py  test_calendar.py  test_documents.py  test_registry.py  test_search.py  test_state.py  test_timer.py
tests/voice/: conftest.py  test_audio_capture.py  test_display.py  test_events.py  test_listen_loop.py  test_logging.py  test_orchestrator.py  test_recorder.py  test_state_machine.py  test_transcribe.py  test_transcribe_integration.py  test_vad.py  test_wakeword.py
(+5 files in other folders)
