[project]
name = "max-ai"
version = "0.1.0"
description = "Personal AI Agent Harness"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "spotipy>=2.23.0",
    "langwatch>=0.3.0",
    "elevenlabs>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "noisereduce>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.0.0",
]
wake-word = [
    "pvporcupine>=3.0",
    "deepgram-sdk>=3.0,<4.0",
    "torch>=2.0",
    "numpy>=1.24",
]

[project.scripts]
max-ai = "max_ai.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/max_ai"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
files = ["src/max_ai", "tests"]

[[tool.mypy.overrides]]
module = ["spotipy", "spotipy.*", "soundfile", "sounddevice", "noisereduce"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["langwatch", "langwatch.*"]
follow_imports = "skip"

[[tool.mypy.overrides]]
module = ["pvporcupine", "pvporcupine.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["deepgram", "deepgram.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["torch", "torch.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
